src/styles/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
  body {
    @apply vayla-body-text;
    overflow-wrap: break-word;
    /* For legacy support */
    word-wrap: break-word;
    -ms-word-break: break-all;
    word-break: normal;
  }
  body hr {
    @apply border-gray;
  }
  body :is(input[type="text"], input[type="password"], input[type="number"], input[type="date"], textarea, select).hassu-input {
    @apply border w-full py-2.5 px-3 outline-none vayla-body-text;
  }
  body textarea {
    @apply resize-none;
  }
  body
    :is(input[type="text"], input[type="password"], input[type="number"], input[type="date"], textarea, select):not(:disabled).hassu-input {
    box-shadow: inset rgb(0 0 0 / 10%) 0px 0px 2px 0px, inset rgb(0 0 0 / 10%) 0px 2px 4px 0px;
  }
  body
    :is(input[type="text"], input[type="password"], input[type="number"], input[type="date"], textarea, select):not(:disabled):not(.error).hassu-input {
    @apply border-primary;
  }
  body :is(input[type="text"], input[type="password"], input[type="number"], input[type="date"], textarea, select):disabled.hassu-input {
    @apply border-gray-dark bg-gray-light;
  }
  body :is(input[type="text"], input[type="password"], input[type="number"], input[type="date"], textarea, select).error.hassu-input {
    @apply border-red;
  }
  body :is(input[type="text"], input[type="password"], input[type="number"], input[type="date"], textarea, select):focus.hassu-input {
    @apply ring-1;
  }
  body
    :is(input[type="text"], input[type="password"], input[type="number"], input[type="date"], textarea, select):focus:not(.error).hassu-input {
    @apply ring-1 ring-primary;
  }
  body :is(input[type="text"], input[type="password"], input[type="number"], input[type="date"], textarea, select).error.hassu-input:focus {
    @apply ring-red;
  }
  body select.hassu-input {
    @apply appearance-none cursor-pointer disabled:cursor-default disabled:opacity-100;
  }
  html {
    scroll-behavior: smooth;
  }
  body h1 {
    @apply vayla-hero;
  }
  body :is(h1, h2, h3, h4, h5, p) {
    @apply mb-4;
  }
  body :is(h6) {
    @apply mb-2;
  }
  body :is(h2, h3) {
    @apply vayla-lead;
  }

  @font-face {
    font-family: "Exo 2";
    src: url("/fonts/Exo2/Exo2-Thin.ttf") format("truetype");
    font-weight: 100;
    font-style: normal;
  }
  @font-face {
    font-family: "Exo 2";
    src: url("/fonts/Exo2/Exo2-ExtraLight.ttf") format("truetype");
    font-weight: 200;
    font-style: normal;
  }
  @font-face {
    font-family: "Exo 2";
    src: url("/fonts/Exo2/Exo2-Light.ttf") format("truetype");
    font-weight: 300;
    font-style: normal;
  }
  @font-face {
    font-family: "Exo 2";
    src: url("/fonts/Exo2/Exo2-Regular.ttf") format("truetype");
    font-weight: 400;
    font-style: normal;
  }
  @font-face {
    font-family: "Exo 2";
    src: url("/fonts/Exo2/Exo2-Medium.ttf") format("truetype");
    font-weight: 500;
    font-style: normal;
  }
  @font-face {
    font-family: "Exo 2";
    src: url("/fonts/Exo2/Exo2-SemiBold.ttf") format("truetype");
    font-weight: 600;
    font-style: normal;
  }
  @font-face {
    font-family: "Exo 2";
    src: url("/fonts/Exo2/Exo2-Bold.ttf") format("truetype");
    font-weight: 700;
    font-style: normal;
  }
  @font-face {
    font-family: "Exo 2";
    src: url("/fonts/Exo2/Exo2-ExtraBold.ttf") format("truetype");
    font-weight: 800;
    font-style: normal;
  }
  @font-face {
    font-family: "Exo 2";
    src: url("/fonts/Exo2/Exo2-Black.ttf") format("truetype");
    font-weight: 900;
    font-style: normal;
  }

  @font-face {
    font-family: "Exo 2";
    src: url("/fonts/Exo2/Exo2-ThinItalic.ttf") format("truetype");
    font-weight: 100;
    font-style: italic;
  }
  @font-face {
    font-family: "Exo 2";
    src: url("/fonts/Exo2/Exo2-ExtraLightItalic.ttf") format("truetype");
    font-weight: 200;
    font-style: italic;
  }
  @font-face {
    font-family: "Exo 2";
    src: url("/fonts/Exo2/Exo2-LightItalic.ttf") format("truetype");
    font-weight: 300;
    font-style: italic;
  }
  @font-face {
    font-family: "Exo 2";
    src: url("/fonts/Exo2/Exo2-RegularItalic.ttf") format("truetype");
    font-weight: 400;
    font-style: italic;
  }
  @font-face {
    font-family: "Exo 2";
    src: url("/fonts/Exo2/Exo2-MediumItalic.ttf") format("truetype");
    font-weight: 500;
    font-style: italic;
  }
  @font-face {
    font-family: "Exo 2";
    src: url("/fonts/Exo2/Exo2-SemiBoldItalic.ttf") format("truetype");
    font-weight: 600;
    font-style: italic;
  }
  @font-face {
    font-family: "Exo 2";
    src: url("/fonts/Exo2/Exo2-BoldItalic.ttf") format("truetype");
    font-weight: 700;
    font-style: italic;
  }
  @font-face {
    font-family: "Exo 2";
    src: url("/fonts/Exo2/Exo2-ExtraBoldItalic.ttf") format("truetype");
    font-weight: 800;
    font-style: italic;
  }
  @font-face {
    font-family: "Exo 2";
    src: url("/fonts/Exo2/Exo2-BlackItalic.ttf") format("truetype");
    font-weight: 900;
    font-style: italic;
  }
}

@layer components {
  .indent {
    padding-left: 25px;
  }

  .hassu-header-text {
    font-size: 1.25rem;
    line-height: 1.375rem;
    color: #242222;
  }

  .vayla-hero {
    font-weight: 700;
    font-size: 2.4375rem;
    line-height: 1.231;
    color: #242222;
  }

  .vayla-title {
    font-weight: 700;
    font-size: 1.75rem;
    line-height: 1.143;
    color: #242222;
  }

  .vayla-lead {
    font-weight: 400;
    font-size: 1.5rem;
    line-height: 1.333;
    color: #242222;
  }

  .vayla-subtitle {
    font-weight: 700;
    font-size: 1.4375rem;
    line-height: 1.174;
    color: #242222;
  }

  .vayla-paragraph {
    font-weight: 400;
    font-size: 1.125rem;
    line-height: 1.333;
    color: #242222;
  }

  .vayla-small-title {
    font-weight: 700;
    font-size: 1.25rem;
    line-height: 1.1;
    color: #242222;
  }

  .vayla-smallest-title {
    font-weight: 700;
    font-size: 1rem;
    line-height: 1.5;
    color: #242222;
  }

  .vayla-body-text {
    font-weight: 400;
    font-size: 1rem;
    color: #242222;
    line-height: 1.5;
  }

  .vayla-label {
    font-weight: 700;
    font-size: 1rem;
    color: #333333;
    line-height: normal;
  }

  .vayla-dialog-title {
    font-weight: 700;
    font-size: 24px;
    color: #242222;
    line-height: 1.3;
  }

  .vayla-dialog-list {
    margin-left: 2rem;
    list-style-type: disc;
    @apply pb-6;
  }

  .vayla-dialog-content {
    padding: 0rem 1.5rem;
  }

  .vayla-link {
    font-weight: 400;
    font-size: 1.125rem;
    color: #0064af;
    line-height: 1.222;
  }

  .vayla-blockquote {
    font-weight: 300;
    font-style: italic;
    font-size: 1.25rem;
    color: #242222;
    text-align: center;
    line-height: 1.6;
  }

  .vayla-navigation {
    font-weight: 400;
    font-size: 1rem;
    color: #242222;
    line-height: normal;
  }

  .vayla-table-odd {
    @apply bg-white py-8 pl-4 mb-0;
    border-bottom-color: #4ac2f1;
    border-bottom-style: solid;
    border-bottom-width: 2px;
  }

  .vayla-table-even {
    @apply bg-gray-lightest py-8 pl-4 mb-0;
    border-bottom-color: #4ac2f1;
    border-bottom-style: solid;
    border-bottom-width: 2px;
  }

  .vayla-table-header {
    @apply pl-4;
    color: #7a7a7a;
  }

  .vayla-calling-card > p {
    margin-bottom: 0px;
  }

  .vayla-tilaisuus-item:nth-child(odd) {
    background: #f8f8f8;
  }

  .vayla-tilaisuus-item {
    padding-top: 1rem;
    padding-left: 1rem;
    border-left-style: solid;
    border-left-width: 0.6rem;
    border-left-color: #009ae0;
    border-bottom-style: solid;
    border-bottom-width: 2px;
    border-bottom-color: #4ac2f1;
  }

  .vayla-tilaisuus-item.inactive {
    padding-top: 1rem;
    padding-left: 1rem;
    border-left-style: solid;
    border-left-width: 0.6rem;
    border-left-color: #999999;
    border-bottom-style: solid;
    border-bottom-width: 2px;
    border-bottom-color: #4ac2f1;
  }

  .select-wrapper {
    @apply relative;
  }
  .btn {
    @apply leading-relaxed uppercase block py-1 px-6 shadow rounded-full relative bg-white text-primary-dark border border-primary-dark transition;
    font-size: 1.25rem;
    inline-size: fit-content;
  }
  .btn:disabled,
  .btn.disabled {
    @apply opacity-50 cursor-default;
  }
  .btn:not(:disabled):not(.disabled):not(:active):hover {
    @apply shadow-lg;
  }
  .btn:active {
    @apply shadow-none;
  }
  .btn-primary {
    @apply btn bg-primary-dark text-white;
  }
  .btn-remove-red {
    @apply btn text-red border-red;
  }
  .alert {
    @apply border py-2 px-3 bg-gray-lightest border-gray;
  }
  .alert-error {
    @apply alert bg-white border-fuchsia;
  }
  .alert-info {
    @apply alert bg-white border-primary-light;
  }
  .truncate-ellipsis {
    @apply text-ellipsis whitespace-nowrap overflow-hidden;
  }
  .ingress {
    @apply mb-8;
  }
}

